scss/_base_typography.scss
@import 'settings';

// Typographic element styles
@mixin vf-b-typography {
  @if str-index($font-base-family, 'Ubuntu') {
    @font-face {
      font-family: 'Ubuntu';
      font-style: normal;
      font-weight: 300;
      src: url('#{$assets-path}e8c07df6-Ubuntu-L_W.woff2') format('woff2'), url('#{$assets-path}8619add2-Ubuntu-L_W.woff') format('woff');
    }

    @font-face {
      font-family: 'Ubuntu';
      font-style: normal;
      font-weight: 400;
      src: url('#{$assets-path}fff37993-Ubuntu-R_W.woff2') format('woff2'), url('#{$assets-path}7af50859-Ubuntu-R_W.woff') format('woff');
    }

    @font-face {
      font-family: 'Ubuntu';
      font-style: italic;
      font-weight: 300;
      src: url('#{$assets-path}f8097dea-Ubuntu-LI_W.woff2') format('woff2'), url('#{$assets-path}8be89d02-Ubuntu-LI_W.woff') format('woff');
    }

    @font-face {
      font-family: 'Ubuntu';
      font-style: italic;
      font-weight: 400;
      src: url('#{$assets-path}fca66073-ubuntu-ri-webfont.woff2') format('woff2'), url('#{$assets-path}f0898c72-ubuntu-ri-webfont.woff') format('woff');
    }

    @font-face {
      font-family: 'Ubuntu';
      font-style: normal;
      font-weight: 100;
      src: url('#{$assets-path}7f100985-Ubuntu-Th_W.woff2') format('woff2'), url('#{$assets-path}502cc3a1-Ubuntu-Th_W.woff') format('woff');
    }

    @font-face {
      font-family: 'Ubuntu Mono';
      font-style: normal;
      font-weight: 300;
      src: url('#{$assets-path}fdd692b9-UbuntuMono-R_W.woff2') format('woff2'), url('#{$assets-path}85edb898-UbuntuMono-R_W.woff') format('woff');
    }

    @font-face {
      font-family: 'Ubuntu Mono';
      font-style: normal;
      font-weight: 400;
      src: url('#{$assets-path}fdd692b9-UbuntuMono-R_W.woff2') format('woff2'), url('#{$assets-path}85edb898-UbuntuMono-R_W.woff') format('woff');
    }

    @if $font-allow-cyrillic-greek-latin {
      // cyrillic-ext
      @font-face {
        font-family: 'Ubuntu';
        font-style: normal;
        font-weight: 300;
        src: local('Ubuntu'), url('#{$font-import}ODszJI8YqNw8V2xPulzjO_esZW2xOQ-xsNqO47m55DA.woff2') format('woff2');
        unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
      }

      // cyrillic
      @font-face {
        font-family: 'Ubuntu';
        font-style: normal;
        font-weight: 300;
        src: local('Ubuntu'), url('#{$font-import}iQ9VJx1UMASKNiGywyyCXvesZW2xOQ-xsNqO47m55DA.woff2') format('woff2');
        unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
      }

      // greek-ext
      @font-face {
        font-family: 'Ubuntu';
        font-style: normal;
        font-weight: 300;
        src: local('Ubuntu'), url('#{$font-import}WkvQmvwsfw_KKeau9SlQ2_esZW2xOQ-xsNqO47m55DA.woff2') format('woff2');
        unicode-range: U+1F00-1FFF;
      }

      // greek
      @font-face {
        font-family: 'Ubuntu';
        font-style: normal;
        font-weight: 300;
        src: local('Ubuntu'), url('#{$font-import}gYAtqXUikkQjyJA1SnpDLvesZW2xOQ-xsNqO47m55DA.woff2') format('woff2');
        unicode-range: U+0370-03FF;
      }

      // latin-ext
      @font-face {
        font-family: 'Ubuntu';
        font-style: normal;
        font-weight: 300;
        src: local('Ubuntu'), url('#{$font-import}Wu5Iuha-XnKDBvqRwQzAG_esZW2xOQ-xsNqO47m55DA.woff2') format('woff2');
        unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
      }

      // latin
      @font-face {
        font-family: 'Ubuntu';
        font-style: normal;
        font-weight: 300;
        src: local('Ubuntu'), url('#{$font-import}sDGTilo5QRsfWu6Yc11AXg.woff2') format('woff2');
        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
      }
    }
  }

  html {
    // sass-lint:disable no-vendor-prefixes
    // These vendor prefixes are unique and cannot be added by autoprefixer
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    // sass-lint:enable no-vendor-prefixes
    color: $color-dark;
    font-family: unquote($font-base-family);
    font-size: $font-base-size;
    // sass-lint:disable no-misspelled-properties
    font-smoothing: subpixel-antialiased;
    // sass-lint:enable no-misspelled-properties
    font-weight: 300;
    // set default line height to match p
    line-height: map-get($line-heights, default-text);
  }

  /// Base typography
  /// @section type
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  [class^="p-heading--"] {
    font-family: unquote($font-heading-family);
  }

  cite {
    @extend %default-text;
  }

  p {
    @extend %paragraph;
    @include p-max-width;

    &:empty {
      line-height: 0;
      margin: 0;
      padding: 0;
    }
  }

  button,
  input,
  select,
  textarea {
    font-family: unquote($font-base-family);
  }

  // headings
  h1 {
    @include vf-heading-1;
  }

  h2 {
    @include vf-heading-2;
  }

  h3 {
    @include vf-heading-3;
  }

  h4 {
    @include vf-heading-4;
  }

  h5 {
    @include vf-heading-5;
  }

  h6 {
    @include vf-heading-6;
  }

  // blockquotes
  blockquote {
    margin-bottom: 0;
    margin-left: 0;
    margin-top: 0;
    overflow: auto; // include margins of children into it's own height
    padding-left: $sp-large;

    > p {
      font-style: italic;
    }

    > cite {
      font-style: normal;
    }
  }

  // misc
  strong {
    @extend %bold;
  }

  small {
    @extend %small-text;

    &.dense {
      margin-bottom: map-get($sp-after, small--dense) + map-get($line-heights, default-text) - map-get($line-heights, small) - map-get($nudges, nudge--small);
    }
  }

  sub,
  sup {
    line-height: 0;
    position: relative;
    vertical-align: baseline;
  }

  h5,
  h6,
  .p-heading--five,
  .p-heading--six {
    & + p,
    & + & {
      margin-top: - map-get($sp-after, p) + $sp-unit * 3;
    }
  }

  p,
  h5,
  h6,
  .p-heading--five,
  .p-heading--six {
    .p-muted-heading + & {
      margin-top: -$sp-unit * 2;
    }
  }

  p + p:not(.p-muted-heading),
  h5 + p:not(.p-muted-heading),
  h6 + p:not(.p-muted-heading),
  .p-heading--five + p:not(.p-muted-heading),
  .p-heading--six + p:not(.p-muted-heading) {
    margin-top: -$sp-unit * 2;
  }

  // Increase space above headings that follow a paragraph.

  %sp--ph1 {
    padding-top: map-get($nudges, nudge--h1) + map-get($sp-before, h1);
  }

  %sp--ph2 {
    padding-top: map-get($nudges, nudge--h2) + map-get($sp-before, h2);
  }

  %sp--ph3 {
    padding-top: map-get($nudges, nudge--h3) + map-get($sp-before, h3);
  }

  %sp--ph4 {
    padding-top: map-get($nudges, nudge--h4) + map-get($sp-before, h4);
  }

  %sp--ph5 {
    padding-top: map-get($nudges, nudge--p) + map-get($sp-before, h5);
  }

  %sp--pmuted {
    padding-top: map-get($nudges, nudge--muted) + map-get($sp-before, muted);
  }

  ul,
  p,
  h5,
  h6,
  .p-heading--five,
  .p-heading-6 {
    & + h1,
    & + h2,
    & + .p-heading--one,
    & + .p-heading--two {
      @extend %sp--ph1;
    }
  }

  p + h2,
  p + .p-heading--two {
    @extend %sp--ph2;
  }

  p + h3,
  p + .p-heading--three {
    @extend %sp--ph3;
  }

  p + h4,
  p + .p-heading--four {
    @extend %sp--ph4;
  }

  p + h5,
  p + .p-heading--five,
  p + h6,
  p + .p-heading--six {
    @extend %sp--ph5;
  }

  p + .p-muted-heading {
    @extend %sp--pmuted;
  }


  // Heading placeholders

  %vf-heading-1 {
    @include heading-max-width--short;
    font-size: pow($ms-ratio, 8) * 1rem;
    font-style: normal;
    font-weight: 300;
    line-height: map-get($line-heights, h1);
    margin-bottom: map-get($sp-after, h1) - map-get($nudges, nudge--h1);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--h1);
  }

  %vf-heading-2 {
    @include heading-max-width--short;
    font-size: pow($ms-ratio, 6) * 1rem;
    font-style: normal;
    font-weight: 300;
    line-height: map-get($line-heights, h2);
    margin-bottom: map-get($sp-after, h2) - map-get($nudges, nudge--h2);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--h2);
  }

  %vf-heading-3 {
    @include heading-max-width--long;
    font-size: pow($ms-ratio, 4) * 1rem;
    font-style: normal;
    font-weight: 300;
    line-height: map-get($line-heights, h3);
    margin-bottom: map-get($sp-after, h3) - map-get($nudges, nudge--h3);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--h3);
  }

  %vf-heading-4 {
    @include heading-max-width--long;
    font-size: pow($ms-ratio, 2) * 1rem;
    font-style: normal;
    font-weight: 300;
    line-height: map-get($line-heights, h4);
    margin-bottom: map-get($sp-after, h4) - map-get($nudges, nudge--h4);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--h4);
  }

  %vf-heading-5 {
    @extend %paragraph;
    @include p-max-width;
    font-size: 1rem;
    font-style: normal;
    font-weight: 500;
  }

  %vf-heading-6 {
    @extend %paragraph;
    @include p-max-width;
    font-size: 1rem;
    font-style: italic;
    font-weight: 300;
  }

  %default-text {
    line-height: map-get($line-heights, default-text);
    margin-bottom: map-get($sp-after, default-text) - map-get($nudges, nudge--p);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--p);
  }

  %paragraph {
    @extend %default-text;
    margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
  }

  %small-text {
    @extend %max-width--p;
    display: inline-block;
    font-size: 1rem / pow($ms-ratio, 1);
    line-height: map-get($line-heights, small);
    margin-bottom: map-get($sp-after, small) + map-get($line-heights, default-text) - map-get($line-heights, small) - map-get($nudges, nudge--small);
    padding-top: map-get($nudges, nudge--small);
  }

  %muted-heading {
    @extend %small-text;
    color: $color-mid-dark;
    margin-bottom: - map-get($nudges, nudge--muted) + $spv-inter--condensed;
    margin-top: 0;
    text-transform: uppercase;
  }

  %max-width--p {
    max-width: 38em;
  }

  //expose measure as a class
  %measure--p,
  .measure--p {
    @extend %max-width--p;
  }

  %bold {
    font-weight: 400;
  }
}

// Optimal max-width for main headings (up to 2 lines of copy)
@mixin heading-max-width--short {
  max-width: 20em;
}

// Optimal max-width for headings (up to 3 lines of copy)
@mixin heading-max-width--long {
  max-width: 25em;
}

// Optimal max-width for body copy
@mixin p-max-width {
  @extend %max-width--p;
}

// Relaxed max-width for cases like notifications, where minimizing vertical height is
// more important than maintaining the optimal max-width of 35em
@mixin p-max-width--long {
  max-width: 60em;
}

// For compatibility with other sites which rely on these mixins
@mixin vf-heading-1 {
  @extend %vf-heading-1;
}

@mixin vf-heading-2 {
  @extend %vf-heading-2;
}

@mixin vf-heading-3 {
  @extend %vf-heading-3;
}

@mixin vf-heading-4 {
  @extend %vf-heading-4;
}

@mixin vf-heading-5 {
  @extend %vf-heading-5;
}

@mixin vf-heading-6 {
  @extend %vf-heading-6;
}

